# amux

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile.dev  Makefile  README.md  REVIEW-NOTES-0060.md
.amux/: Dockerfile.claude  Dockerfile.codex  Dockerfile.copilot  Dockerfile.crush  config.json
.claude/: settings.local.json
.claude/skills/: alog.md
.github/workflows/: release.yml  test.yml
aspec/: .alog.json  foundation.md  ideas.md
aspec/architecture/: design.md
aspec/review-notes/: 0062-minor-issues.md
aspec/uxui/: cli.md
aspec/work-items/: .0055-model-selection-flag.md.swp  new-amux-issues.md  (+21 more)
docs/: 00-getting-started.md  01-using-the-tui.md  02-agent-sessions.md  03-security-and-isolation.md  04-workflows.md  05-yolo-mode.md  06-nanoclaw.md  07-configuration.md  08-headless-mode.md  09-remote-mode.md  architecture.md  contents.md  getting-started.md  usage.md  workflows.md
oldsrc/: README.md  git.rs  lib.rs
scripts/: release.sh
src/: cli.rs  git.rs  lib.rs  main.rs  passthrough.rs
templates/: Dockerfile.claude  Dockerfile.cline  Dockerfile.codex  Dockerfile.copilot  Dockerfile.crush  Dockerfile.gemini  Dockerfile.maki  Dockerfile.nanoclaw  Dockerfile.opencode  Dockerfile.project
tests/: cli_integration.rs  command_tui_parity.rs  dockerfile_build.rs  download_integration.rs  headless_e2e.rs  headless_integration.rs  init_unification.rs  memory_bounds.rs  modular_dockerfiles.rs  overlays_integration.rs  remote_integration.rs  runtime_integration.rs  shortcuts_0054.rs  stuck_yolo_behavior.rs  terminal_selection.rs  tui_tabs.rs  work-item-0014.sh
(+173 files in other folders)
