[package]
name = "aspec"
version = "0.1.0"
edition = "2021"
description = "A CLI tool for managing predictable and secure agentic coding environments"

[[bin]]
name = "aspec"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
crossterm = "0.29"
dirs = "6"
portable-pty = "0.8"
ratatui = "0.30"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strip-ansi-escapes = "0.2"
strsim = "0.11"
tempfile = "3"
vt100 = "0.15"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
