[package]
name = "amux"
version = "0.3.0"
edition = "2021"
rust-version = "1.94.0"
description = "A containerized code and claw agent manager"

[[bin]]
name = "amux"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
crossterm = "0.29"
dirs = "6"
portable-pty = "0.8"
ratatui = "0.30"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strip-ansi-escapes = "0.2"
strsim = "0.11"
tempfile = "3"
vt100 = "0.15"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
unicode-width = "0.2"
flate2 = "1"
tar = "0.4"
sha2 = "0.10"

[dev-dependencies]
